--- a/config/database.yml
+++ b/config/database.yml
@@ -43,7 +43,7 @@ test:
 #   DATABASE_URL="mysql2://myuser:mypass@localhost/somedatabase"
 #
 # You can use this database configuration with:
-#
+#git
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
@@ -51,6 +51,6 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: message-board_production
-  username: message-board
-  password: <%= ENV['MESSAGE-BOARD_DATABASE_PASSWORD'] %>
+  database: tasks_production
+  username: tasks
+  password: <%= ENV['TASKS_DATABASE_PASSWORD'] %>
